--- a/Projetos/DIOProjectSeries/DIOProjectSeries/.vscode/launch.json
+++ b/Projetos/DIOProjectSeries/DIOProjectSeries/.vscode/launch.json
@@ -12,7 +12,7 @@
             "program": "${workspaceFolder}/bin/Debug/net6.0/DIOProjectSeries.dll",
             "args": [],
             "cwd": "${workspaceFolder}",
-            "console": "integrateConsole",
+            "console": "integratedTerminal",
             "stopAtEntry": false
         },
         {
